--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,131 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
+<ion-header [translucent]="true" class="ion-no-border">
+	<ion-toolbar>
+		<ion-title>Blank</ion-title>
+	</ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+	<div class="calculation-section">
+		<div class="operation-section">
+			<h3>{{expression}}</h3>
+			<h1>{{result}}</h1>
+		</div>
+	</div>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+	<div class="button-section">
+		<div class="buttons">
+			<ion-grid>
+				<ion-row>
+					<ion-col size="3">
+						<button class="blue-button" (click)="onButtonPress('ac')">
+							<h2>AC</h2>
+						</button>
+					</ion-col>
+					<ion-col size="3" (click)="onButtonPress('')">
+						<button class="blue-button">
+							<h2>+/-</h2>
+						</button>
+					</ion-col>
+					<ion-col size="3" (click)="onButtonPress('')">
+						<button class="blue-button">
+							<h2>%</h2>
+						</button>
+					</ion-col>
+					<ion-col size="3" (click)="onButtonPress('/')">
+						<button class="red-button">
+							<h2>/</h2>
+						</button>
+					</ion-col>
+				</ion-row>
+				<ion-row>
+					<ion-col size="3">
+						<button (click)="onButtonPress(7)">
+							<h2>7</h2>
+						</button>
+					</ion-col>
+					<ion-col size="3">
+						<button (click)="onButtonPress(8)">
+							<h2>8</h2>
+						</button>
+					</ion-col>
+					<ion-col size="3">
+						<button (click)="onButtonPress(9)">
+							<h2>9</h2>
+						</button>
+					</ion-col>
+					<ion-col size="3">
+						<button class="red-button" (click)="onButtonPress('x')">
+							<h2>&times;</h2>
+						</button>
+					</ion-col>
+				</ion-row>
+				<ion-row>
+					<ion-col size="3">
+						<button (click)="onButtonPress(4)">
+							<h2>4</h2>
+						</button>
+					</ion-col>
+					<ion-col size="3">
+						<button (click)="onButtonPress(5)">
+							<h2>5</h2>
+						</button>
+					</ion-col>
+					<ion-col size="3">
+						<button (click)="onButtonPress(6)">
+							<h2>6</h2>
+						</button>
+					</ion-col>
+					<ion-col size="3">
+						<button class="red-button" (click)="onButtonPress('-')">
+							<h2>&minus;</h2>
+						</button>
+					</ion-col>
+				</ion-row>
+				<ion-row>
+					<ion-col size="3">
+						<button (click)="onButtonPress(1)">
+							<h2>1</h2>
+						</button>
+					</ion-col>
+					<ion-col size="3">
+						<button (click)="onButtonPress(2)">
+							<h2>2</h2>
+						</button>
+					</ion-col>
+					<ion-col size="3">
+						<button (click)="onButtonPress(3)">
+							<h2>3</h2>
+						</button>
+					</ion-col>
+					<ion-col size="3">
+						<button class="red-button" (click)="onButtonPress('+')">
+							<h2>+</h2>
+						</button>
+					</ion-col>
+				</ion-row>
+				<ion-row>
+					<ion-col size="3">
+						<button (click)="onButtonPress('')">
+							<h2><</h2>
+						</button>
+					</ion-col>
+					<ion-col size="3">
+						<button (click)="onButtonPress(0)">
+							<h2>0</h2>
+						</button>
+					</ion-col>
+					<ion-col size="3">
+						<button (click)="onButtonPress('.')">
+							<h2>.</h2>
+						</button>
+					</ion-col>
+					<ion-col size="3">
+						<button class="red-button" (click)="onButtonPress('=')">
+							<h2>=</h2>
+						</button>
+					</ion-col>
+				</ion-row>
+			</ion-grid>
+		</div>
+	</div>
 </ion-content>
