--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,68 @@
-#container {
-  text-align: center;
+.calculation-section {
+	height: 30%;
+	width: 100%;
 
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+	.operation-section {
+		height: 100%;
+		width: 100%;
+		padding: 1.5em;
+		text-align: right;
+		color: var(--ion-color-dark);
+
+		h3 {
+			font-size: 1.5em;
+			font-weight: 600;
+		}
+
+		h1 {
+			font-size: 4em;
+			font-weight: 700;
+		}
+	}
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
+.button-section {
+	height: 70%;
+	background-color: var(--ion-color-light);
+	border-top-left-radius: 10%;
+	border-top-right-radius: 10%;
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
+	.buttons {
+		height: 100%;
+		width: 100%;
+		padding: 1.5em;
 
-  color: #8c8c8c;
+		ion-grid {
+			height: 100%;
+			width: 100%;
 
-  margin: 0;
-}
+			ion-row {
+				height: calc(100% / 5);
+				width: 100%;
 
-#container a {
-  text-decoration: none;
+				button {
+					width: 100%;
+					text-align: center;
+					vertical-align: middle;
+					background-color: var(--ion-color-medium);
+					border-radius: 10%;
+					outline: none;
+
+					h2 {
+						margin: 16px 0px;
+						font-size: 1.5em;
+						font-weight: 600;
+					}
+				}
+
+				.blue-button {
+					color: var(--ion-color-secondary);
+				}
+
+				.red-button {
+					color: var(--ion-color-danger);
+				}
+			}
+		}
+	}
 }
