--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,6 +1,24 @@
 <ion-header [translucent]="true" class="ion-no-border">
 	<ion-toolbar>
-		<ion-title>Blank</ion-title>
+		<ion-row>
+			<ion-col size="4" offset="4">
+				<div class="toggle-buttons">
+					<button class="sunny" (click)="onToggleLight()">
+						<ion-icon name="sunny-outline"></ion-icon>
+					</button>
+					<button class="moon" (click)="onToggleDark()">
+						<ion-icon name="moon-outline"></ion-icon>
+					</button>
+				</div>
+			</ion-col>
+			<ion-col>
+				<div class="history-button">
+					<button (click)="onShowHistory($event)">
+						<ion-icon name="ellipsis-vertical"></ion-icon>
+					</button>
+				</div>
+			</ion-col>
+		</ion-row>
 	</ion-toolbar>
 </ion-header>
 
@@ -17,112 +35,152 @@
 			<ion-grid>
 				<ion-row>
 					<ion-col size="3">
-						<button class="blue-button" (click)="onButtonPress('ac')">
-							<h2>AC</h2>
-						</button>
+						<div class="button-wrapper">
+							<button class="blue-button" (click)="onButtonPress('ac')">
+								<h2>AC</h2>
+							</button>
+						</div>
 					</ion-col>
-					<ion-col size="3" (click)="onButtonPress('')">
-						<button class="blue-button">
-							<h2>+/-</h2>
-						</button>
+					<ion-col size="3" (click)="onButtonPress('pm')">
+						<div class="button-wrapper">
+							<button class="blue-button">
+								<h2>+/-</h2>
+							</button>
+						</div>
 					</ion-col>
-					<ion-col size="3" (click)="onButtonPress('')">
-						<button class="blue-button">
-							<h2>%</h2>
-						</button>
+					<ion-col size="3" (click)="onButtonPress('per')">
+						<div class="button-wrapper">
+							<button class="blue-button">
+								<h2>%</h2>
+							</button>
+						</div>
 					</ion-col>
-					<ion-col size="3" (click)="onButtonPress('/')">
-						<button class="red-button">
-							<h2>/</h2>
-						</button>
+					<ion-col size="3">
+						<div class="button-wrapper">
+							<button (click)="onButtonPress('c')">
+								<ion-icon name="backspace-outline"></ion-icon>
+							</button>
+						</div>
 					</ion-col>
 				</ion-row>
 				<ion-row>
 					<ion-col size="3">
-						<button (click)="onButtonPress(7)">
-							<h2>7</h2>
-						</button>
+						<div class="button-wrapper">
+							<button (click)="onButtonPress(7)">
+								<h2>7</h2>
+							</button>
+						</div>
 					</ion-col>
 					<ion-col size="3">
-						<button (click)="onButtonPress(8)">
-							<h2>8</h2>
-						</button>
+						<div class="button-wrapper">
+							<button (click)="onButtonPress(8)">
+								<h2>8</h2>
+							</button>
+						</div>
 					</ion-col>
 					<ion-col size="3">
-						<button (click)="onButtonPress(9)">
-							<h2>9</h2>
-						</button>
+						<div class="button-wrapper">
+							<button (click)="onButtonPress(9)">
+								<h2>9</h2>
+							</button>
+						</div>
 					</ion-col>
 					<ion-col size="3">
-						<button class="red-button" (click)="onButtonPress('x')">
-							<h2>&times;</h2>
-						</button>
-					</ion-col>
-				</ion-row>
-				<ion-row>
-					<ion-col size="3">
-						<button (click)="onButtonPress(4)">
-							<h2>4</h2>
-						</button>
-					</ion-col>
-					<ion-col size="3">
-						<button (click)="onButtonPress(5)">
-							<h2>5</h2>
-						</button>
-					</ion-col>
-					<ion-col size="3">
-						<button (click)="onButtonPress(6)">
-							<h2>6</h2>
-						</button>
-					</ion-col>
-					<ion-col size="3">
-						<button class="red-button" (click)="onButtonPress('-')">
-							<h2>&minus;</h2>
-						</button>
+						<div class="button-wrapper">
+							<button class="red-button" (click)="onButtonPress('x')">
+								<h2>&times;</h2>
+							</button>
+						</div>
 					</ion-col>
 				</ion-row>
 				<ion-row>
 					<ion-col size="3">
-						<button (click)="onButtonPress(1)">
-							<h2>1</h2>
-						</button>
+						<div class="button-wrapper">
+							<button (click)="onButtonPress(4)">
+								<h2>4</h2>
+							</button>
+						</div>
 					</ion-col>
 					<ion-col size="3">
-						<button (click)="onButtonPress(2)">
-							<h2>2</h2>
-						</button>
+						<div class="button-wrapper">
+							<button (click)="onButtonPress(5)">
+								<h2>5</h2>
+							</button>
+						</div>
 					</ion-col>
 					<ion-col size="3">
-						<button (click)="onButtonPress(3)">
-							<h2>3</h2>
-						</button>
+						<div class="button-wrapper">
+							<button (click)="onButtonPress(6)">
+								<h2>6</h2>
+							</button>
+						</div>
 					</ion-col>
 					<ion-col size="3">
-						<button class="red-button" (click)="onButtonPress('+')">
-							<h2>+</h2>
-						</button>
+						<div class="button-wrapper">
+							<button class="red-button" (click)="onButtonPress('-')">
+								<h2>&minus;</h2>
+							</button>
+						</div>
 					</ion-col>
 				</ion-row>
 				<ion-row>
 					<ion-col size="3">
-						<button (click)="onButtonPress('')">
-							<h2><</h2>
-						</button>
+						<div class="button-wrapper">
+							<button (click)="onButtonPress(1)">
+								<h2>1</h2>
+							</button>
+						</div>
 					</ion-col>
 					<ion-col size="3">
-						<button (click)="onButtonPress(0)">
-							<h2>0</h2>
-						</button>
+						<div class="button-wrapper">
+							<button (click)="onButtonPress(2)">
+								<h2>2</h2>
+							</button>
+						</div>
 					</ion-col>
 					<ion-col size="3">
-						<button (click)="onButtonPress('.')">
-							<h2>.</h2>
-						</button>
+						<div class="button-wrapper">
+							<button (click)="onButtonPress(3)">
+								<h2>3</h2>
+							</button>
+						</div>
 					</ion-col>
 					<ion-col size="3">
-						<button class="red-button" (click)="onButtonPress('=')">
-							<h2>=</h2>
-						</button>
+						<div class="button-wrapper">
+							<button class="red-button" (click)="onButtonPress('+')">
+								<h2>+</h2>
+							</button>
+						</div>
+					</ion-col>
+				</ion-row>
+				<ion-row>
+					<ion-col size="3">
+						<div class="button-wrapper">
+							<button (click)="onButtonPress(0)">
+								<h2>0</h2>
+							</button>
+						</div>
+					</ion-col>
+					<ion-col size="3">
+						<div class="button-wrapper">
+							<button (click)="onButtonPress('.')">
+								<h2>.</h2>
+							</button>
+						</div>
+					</ion-col>
+					<ion-col size="3">
+						<div class="button-wrapper">
+							<button class="red-button" (click)="onButtonPress('/')">
+								<h2>/</h2>
+							</button>
+						</div>
+					</ion-col>
+					<ion-col size="3">
+						<div class="button-wrapper">
+							<button class="red-button" (click)="onButtonPress('=')">
+								<h2>=</h2>
+							</button>
+						</div>
 					</ion-col>
 				</ion-row>
 			</ion-grid>
