--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,13 +1,65 @@
+ion-toolbar,
+ion-content {
+	--background: var(--ion-color-background);
+}
+
+.history-button {
+	height: 40px;
+	margin-top: 10px;
+	display: flex;
+	justify-content: flex-end;
+
+	button {
+		padding: 0px 10px;
+		outline: none;
+		background: none;
+
+		ion-icon {
+			font-size: 1.5em;
+			color: var(--ion-color-dark);
+		}
+	}
+}
+
+.toggle-buttons {
+	height: 40px;
+	margin-top: 10px;
+	display: flex;
+
+	button {
+		flex-grow: 1;
+		padding: 0px 10px;
+		outline: none;
+		background-color: var(--ion-color-light);
+
+		ion-icon {
+			font-size: 1.5em;
+			color: var(--ion-color-dark);
+		}
+	}
+
+	.sunny {
+		border-top-left-radius: 10px;
+		border-bottom-left-radius: 10px;
+	}
+
+	.moon {
+		border-top-right-radius: 10px;
+		border-bottom-right-radius: 10px;
+	}
+}
+
 .calculation-section {
 	height: 30%;
 	width: 100%;
+	background-color: var(--ion-color-background);
 
 	.operation-section {
 		height: 100%;
 		width: 100%;
 		padding: 1.5em;
 		text-align: right;
-		color: var(--ion-color-dark);
+		color: var(--ion-color-background-contrast);
 
 		h3 {
 			font-size: 1.5em;
@@ -24,8 +76,8 @@
 .button-section {
 	height: 70%;
 	background-color: var(--ion-color-light);
-	border-top-left-radius: 10%;
-	border-top-right-radius: 10%;
+	border-top-left-radius: 7.5%;
+	border-top-right-radius: 7.5%;
 
 	.buttons {
 		height: 100%;
@@ -40,27 +92,40 @@
 				height: calc(100% / 5);
 				width: 100%;
 
-				button {
+				.button-wrapper {
+					height: 100%;
 					width: 100%;
-					text-align: center;
-					vertical-align: middle;
-					background-color: var(--ion-color-medium);
-					border-radius: 10%;
-					outline: none;
+					display: flex;
+					align-items: center;
 
-					h2 {
-						margin: 16px 0px;
-						font-size: 1.5em;
-						font-weight: 600;
+					button {
+						width: 100%;
+						text-align: center;
+						background-color: var(--ion-color-medium);
+						border-radius: 10%;
+						outline: none;
+
+						h2 {
+							margin: 16px 0px;
+							font-size: 1.5em;
+							font-weight: 600;
+							color: var(--ion-color-medium-contrast);
+						}
+
+						ion-icon {
+							margin: 16px 0px;
+							font-size: 1.8em;
+							color: var(--ion-color-medium-contrast);
+						}
 					}
-				}
 
-				.blue-button {
-					color: var(--ion-color-secondary);
-				}
+					.blue-button h2 {
+						color: var(--ion-color-secondary);
+					}
 
-				.red-button {
-					color: var(--ion-color-danger);
+					.red-button h2 {
+						color: var(--ion-color-danger);
+					}
 				}
 			}
 		}
