--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -52,12 +52,12 @@
 	--ion-color-danger-tint: #f38585;
 
 	/** dark **/
-	--ion-color-dark: #222428;
-	--ion-color-dark-rgb: 34, 36, 40;
+	--ion-color-dark: #59595a;
+	--ion-color-dark-rgb: 6, 7, 9;
 	--ion-color-dark-contrast: #ffffff;
 	--ion-color-dark-contrast-rgb: 255, 255, 255;
-	--ion-color-dark-shade: #1e2023;
-	--ion-color-dark-tint: #383a3e;
+	--ion-color-dark-shade: #050608;
+	--ion-color-dark-tint: #1f2022;
 
 	/** medium **/
 	--ion-color-medium: #ecebeb;
@@ -75,157 +75,169 @@
 	--ion-color-light-shade: #d5d5d5;
 	--ion-color-light-tint: #f3f3f3;
 
-	// @media (prefers-color-scheme: dark) {
-	//   /*
-	//    * Dark Colors
-	//    * -------------------------------------------
-	//    */
+	--ion-color-background: #ffffff;
+	--ion-color-background-rgb: 255, 255, 255;
+	--ion-color-background-contrast: #000000;
+	--ion-color-background-contrast-rgb: 0, 0, 0;
+	--ion-color-background-shade: #e0e0e0;
+	--ion-color-background-tint: #ffffff;
 
-	//   body {
-	//     --ion-color-primary: #428cff;
-	//     --ion-color-primary-rgb: 66,140,255;
-	//     --ion-color-primary-contrast: #ffffff;
-	//     --ion-color-primary-contrast-rgb: 255,255,255;
-	//     --ion-color-primary-shade: #3a7be0;
-	//     --ion-color-primary-tint: #5598ff;
+	/*
+	   * Dark Colors
+	   * -------------------------------------------
+	   */
 
-	//     --ion-color-secondary: #50c8ff;
-	//     --ion-color-secondary-rgb: 80,200,255;
-	//     --ion-color-secondary-contrast: #ffffff;
-	//     --ion-color-secondary-contrast-rgb: 255,255,255;
-	//     --ion-color-secondary-shade: #46b0e0;
-	//     --ion-color-secondary-tint: #62ceff;
+	body.dark {
+		--ion-color-primary: #428cff;
+		--ion-color-primary-rgb: 66, 140, 255;
+		--ion-color-primary-contrast: #ffffff;
+		--ion-color-primary-contrast-rgb: 255, 255, 255;
+		--ion-color-primary-shade: #3a7be0;
+		--ion-color-primary-tint: #5598ff;
 
-	//     --ion-color-tertiary: #6a64ff;
-	//     --ion-color-tertiary-rgb: 106,100,255;
-	//     --ion-color-tertiary-contrast: #ffffff;
-	//     --ion-color-tertiary-contrast-rgb: 255,255,255;
-	//     --ion-color-tertiary-shade: #5d58e0;
-	//     --ion-color-tertiary-tint: #7974ff;
+		--ion-color-secondary: #29d9b9;
+		--ion-color-secondary-rgb: 41, 217, 185;
+		--ion-color-secondary-contrast: #000000;
+		--ion-color-secondary-contrast-rgb: 0, 0, 0;
+		--ion-color-secondary-shade: #24bfa3;
+		--ion-color-secondary-tint: #3eddc0;
 
-	//     --ion-color-success: #2fdf75;
-	//     --ion-color-success-rgb: 47,223,117;
-	//     --ion-color-success-contrast: #000000;
-	//     --ion-color-success-contrast-rgb: 0,0,0;
-	//     --ion-color-success-shade: #29c467;
-	//     --ion-color-success-tint: #44e283;
+		--ion-color-tertiary: #6a64ff;
+		--ion-color-tertiary-rgb: 106, 100, 255;
+		--ion-color-tertiary-contrast: #ffffff;
+		--ion-color-tertiary-contrast-rgb: 255, 255, 255;
+		--ion-color-tertiary-shade: #5d58e0;
+		--ion-color-tertiary-tint: #7974ff;
 
-	//     --ion-color-warning: #ffd534;
-	//     --ion-color-warning-rgb: 255,213,52;
-	//     --ion-color-warning-contrast: #000000;
-	//     --ion-color-warning-contrast-rgb: 0,0,0;
-	//     --ion-color-warning-shade: #e0bb2e;
-	//     --ion-color-warning-tint: #ffd948;
+		--ion-color-success: #2fdf75;
+		--ion-color-success-rgb: 47, 223, 117;
+		--ion-color-success-contrast: #000000;
+		--ion-color-success-contrast-rgb: 0, 0, 0;
+		--ion-color-success-shade: #29c467;
+		--ion-color-success-tint: #44e283;
 
-	//     --ion-color-danger: #ff4961;
-	//     --ion-color-danger-rgb: 255,73,97;
-	//     --ion-color-danger-contrast: #ffffff;
-	//     --ion-color-danger-contrast-rgb: 255,255,255;
-	//     --ion-color-danger-shade: #e04055;
-	//     --ion-color-danger-tint: #ff5b71;
+		--ion-color-warning: #ffd534;
+		--ion-color-warning-rgb: 255, 213, 52;
+		--ion-color-warning-contrast: #000000;
+		--ion-color-warning-contrast-rgb: 0, 0, 0;
+		--ion-color-warning-shade: #e0bb2e;
+		--ion-color-warning-tint: #ffd948;
 
-	//     --ion-color-dark: #f4f5f8;
-	//     --ion-color-dark-rgb: 244,245,248;
-	//     --ion-color-dark-contrast: #000000;
-	//     --ion-color-dark-contrast-rgb: 0,0,0;
-	//     --ion-color-dark-shade: #d7d8da;
-	//     --ion-color-dark-tint: #f5f6f9;
+		--ion-color-danger: #f27777;
+		--ion-color-danger-rgb: 242, 119, 119;
+		--ion-color-danger-contrast: #000000;
+		--ion-color-danger-contrast-rgb: 0, 0, 0;
+		--ion-color-danger-shade: #d56969;
+		--ion-color-danger-tint: #f38585;
 
-	//     --ion-color-medium: #989aa2;
-	//     --ion-color-medium-rgb: 152,154,162;
-	//     --ion-color-medium-contrast: #000000;
-	//     --ion-color-medium-contrast-rgb: 0,0,0;
-	//     --ion-color-medium-shade: #86888f;
-	//     --ion-color-medium-tint: #a2a4ab;
+		--ion-color-dark: #acadaf;
+		--ion-color-dark-rgb: 244, 245, 248;
+		--ion-color-dark-contrast: #000000;
+		--ion-color-dark-contrast-rgb: 0, 0, 0;
+		--ion-color-dark-shade: #d7d8da;
+		--ion-color-dark-tint: #f5f6f9;
 
-	//     --ion-color-light: #222428;
-	//     --ion-color-light-rgb: 34,36,40;
-	//     --ion-color-light-contrast: #ffffff;
-	//     --ion-color-light-contrast-rgb: 255,255,255;
-	//     --ion-color-light-shade: #1e2023;
-	//     --ion-color-light-tint: #383a3e;
-	//   }
+		--ion-color-medium: #3b3f49;
+		--ion-color-medium-rgb: 37, 40, 47;
+		--ion-color-medium-contrast: #ffffff;
+		--ion-color-medium-contrast-rgb: 255, 255, 255;
+		--ion-color-medium-shade: #212329;
+		--ion-color-medium-tint: #3b3e44;
 
-	//   /*
-	//    * iOS Dark Theme
-	//    * -------------------------------------------
-	//    */
+		--ion-color-light: #353a44;
+		--ion-color-light-rgb: 51, 53, 56;
+		--ion-color-light-contrast: #ffffff;
+		--ion-color-light-contrast-rgb: 255, 255, 255;
+		--ion-color-light-shade: #2d2f31;
+		--ion-color-light-tint: #47494c;
 
-	//   .ios body {
-	//     --ion-background-color: #000000;
-	//     --ion-background-color-rgb: 0,0,0;
+		--ion-color-background: #25282f;
+		--ion-color-background-rgb: 37, 40, 47;
+		--ion-color-background-contrast: #ffffff;
+		--ion-color-background-contrast-rgb: 255, 255, 255;
+		--ion-color-background-shade: #212329;
+		--ion-color-background-tint: #3b3e44;
+	}
 
-	//     --ion-text-color: #ffffff;
-	//     --ion-text-color-rgb: 255,255,255;
+	/*
+	   * iOS Dark Theme
+	   * -------------------------------------------
+	   */
 
-	//     --ion-color-step-50: #0d0d0d;
-	//     --ion-color-step-100: #1a1a1a;
-	//     --ion-color-step-150: #262626;
-	//     --ion-color-step-200: #333333;
-	//     --ion-color-step-250: #404040;
-	//     --ion-color-step-300: #4d4d4d;
-	//     --ion-color-step-350: #595959;
-	//     --ion-color-step-400: #666666;
-	//     --ion-color-step-450: #737373;
-	//     --ion-color-step-500: #808080;
-	//     --ion-color-step-550: #8c8c8c;
-	//     --ion-color-step-600: #999999;
-	//     --ion-color-step-650: #a6a6a6;
-	//     --ion-color-step-700: #b3b3b3;
-	//     --ion-color-step-750: #bfbfbf;
-	//     --ion-color-step-800: #cccccc;
-	//     --ion-color-step-850: #d9d9d9;
-	//     --ion-color-step-900: #e6e6e6;
-	//     --ion-color-step-950: #f2f2f2;
+	// .ios body .dark {
+	// 	--ion-background-color: #000000;
+	// 	--ion-background-color-rgb: 0, 0, 0;
 
-	//     --ion-toolbar-background: #0d0d0d;
+	// 	--ion-text-color: #ffffff;
+	// 	--ion-text-color-rgb: 255, 255, 255;
 
-	//     --ion-item-background: #000000;
+	// 	--ion-color-step-50: #0d0d0d;
+	// 	--ion-color-step-100: #1a1a1a;
+	// 	--ion-color-step-150: #262626;
+	// 	--ion-color-step-200: #333333;
+	// 	--ion-color-step-250: #404040;
+	// 	--ion-color-step-300: #4d4d4d;
+	// 	--ion-color-step-350: #595959;
+	// 	--ion-color-step-400: #666666;
+	// 	--ion-color-step-450: #737373;
+	// 	--ion-color-step-500: #808080;
+	// 	--ion-color-step-550: #8c8c8c;
+	// 	--ion-color-step-600: #999999;
+	// 	--ion-color-step-650: #a6a6a6;
+	// 	--ion-color-step-700: #b3b3b3;
+	// 	--ion-color-step-750: #bfbfbf;
+	// 	--ion-color-step-800: #cccccc;
+	// 	--ion-color-step-850: #d9d9d9;
+	// 	--ion-color-step-900: #e6e6e6;
+	// 	--ion-color-step-950: #f2f2f2;
 
-	//     --ion-card-background: #1c1c1d;
-	//   }
+	// 	--ion-toolbar-background: #0d0d0d;
 
-	//   /*
+	// 	--ion-item-background: #000000;
+
+	// 	--ion-card-background: #1c1c1d;
+	// }
+
+	// /*
 	//    * Material Design Dark Theme
 	//    * -------------------------------------------
 	//    */
 
-	//   .md body {
-	//     --ion-background-color: #121212;
-	//     --ion-background-color-rgb: 18,18,18;
+	// .md body .dark {
+	// 	--ion-background-color: #121212;
+	// 	--ion-background-color-rgb: 18, 18, 18;
 
-	//     --ion-text-color: #ffffff;
-	//     --ion-text-color-rgb: 255,255,255;
+	// 	--ion-text-color: #ffffff;
+	// 	--ion-text-color-rgb: 255, 255, 255;
 
-	//     --ion-border-color: #222222;
+	// 	--ion-border-color: #222222;
 
-	//     --ion-color-step-50: #1e1e1e;
-	//     --ion-color-step-100: #2a2a2a;
-	//     --ion-color-step-150: #363636;
-	//     --ion-color-step-200: #414141;
-	//     --ion-color-step-250: #4d4d4d;
-	//     --ion-color-step-300: #595959;
-	//     --ion-color-step-350: #656565;
-	//     --ion-color-step-400: #717171;
-	//     --ion-color-step-450: #7d7d7d;
-	//     --ion-color-step-500: #898989;
-	//     --ion-color-step-550: #949494;
-	//     --ion-color-step-600: #a0a0a0;
-	//     --ion-color-step-650: #acacac;
-	//     --ion-color-step-700: #b8b8b8;
-	//     --ion-color-step-750: #c4c4c4;
-	//     --ion-color-step-800: #d0d0d0;
-	//     --ion-color-step-850: #dbdbdb;
-	//     --ion-color-step-900: #e7e7e7;
-	//     --ion-color-step-950: #f3f3f3;
+	// 	--ion-color-step-50: #1e1e1e;
+	// 	--ion-color-step-100: #2a2a2a;
+	// 	--ion-color-step-150: #363636;
+	// 	--ion-color-step-200: #414141;
+	// 	--ion-color-step-250: #4d4d4d;
+	// 	--ion-color-step-300: #595959;
+	// 	--ion-color-step-350: #656565;
+	// 	--ion-color-step-400: #717171;
+	// 	--ion-color-step-450: #7d7d7d;
+	// 	--ion-color-step-500: #898989;
+	// 	--ion-color-step-550: #949494;
+	// 	--ion-color-step-600: #a0a0a0;
+	// 	--ion-color-step-650: #acacac;
+	// 	--ion-color-step-700: #b8b8b8;
+	// 	--ion-color-step-750: #c4c4c4;
+	// 	--ion-color-step-800: #d0d0d0;
+	// 	--ion-color-step-850: #dbdbdb;
+	// 	--ion-color-step-900: #e7e7e7;
+	// 	--ion-color-step-950: #f3f3f3;
 
-	//     --ion-item-background: #1e1e1e;
+	// 	--ion-item-background: #1e1e1e;
 
-	//     --ion-toolbar-background: #1f1f1f;
+	// 	--ion-toolbar-background: #1f1f1f;
 
-	//     --ion-tab-bar-background: #1f1f1f;
+	// 	--ion-tab-bar-background: #1f1f1f;
 
-	//     --ion-card-background: #1e1e1e;
-	//   }
+	// 	--ion-card-background: #1e1e1e;
 	// }
 }
